[package]
name = "dtinfer"
version = "0.1.1"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Infer DateTime format"
keywords = ["datetime", "infer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/dtinfer.rs"
homepage = "https://github.com/klangner/dtinfer.rs"
documentation = "https://docs.rs/dtinfer"
readme = "README.md"
edition = "2018"


[dependencies]
nom = "5"

[dev-dependencies]
assert_approx_eq = "1.1.0"
chrono = "0.4"